--- a/css/styles.css
+++ b/css/styles.css
@@ -77,6 +77,7 @@
 
 .navbar-icon__cart {
   position: relative;
+  cursor: pointer;
 }
 
 .icon-shopping-notification {
@@ -101,22 +102,6 @@
   justify-content: center;
 }
 
-@media (max-width: 1050px) {
-  .icon-menu {
-    display: block;
-    margin-left: 1em;
-  }
-
-  .navbar {
-    padding: 0.5em 0;
-  }
-
-  .email,
-  .navbar-items,
-  .desk-menu {
-    display: none;
-  }
-}
 /* Navbar fin */
 
 /* Menu Desk */
@@ -128,6 +113,8 @@
   padding: 20px;
   position: absolute;
   right: 3.8em;
+  z-index: 90;
+  background: #fff;
   transition: transform 1s;
   transform: translateY(-129%);
 }
@@ -192,7 +179,7 @@ a[class^="mobil-menu__link"] {
 }
 
 .mobil-menu {
-  display: grid;
+  display: none;
   height: 100vh;
   grid-template-rows: 10% 45% 20% 20%;
   margin: 0 40px;
@@ -233,3 +220,113 @@ a[class^="mobil-menu__link"] {
   justify-content: flex-end;
 }
 /* Menu mobil fin */
+
+/* Shopping Car */
+.shopping-cart {
+  width: fit-content;
+  position: absolute;
+  top: 3em;
+  right: 0;
+  transform: translateX(100%);
+  transition: transform 1s;
+}
+
+.order-title__content {
+  display: flex;
+}
+
+.order-title__content img {
+  transform: rotate(180deg);
+  margin-right: 1em;
+}
+
+.order-content {
+  width: 360px;
+  padding: 0 2em;
+}
+
+.order-title {
+  color: var(--black);
+  font-size: var(--text-lg);
+}
+
+.order-info {
+  background: var(--very-light-pink);
+  display: flex;
+  border-radius: 10px;
+  font-size: var(--text-sm);
+  align-items: center;
+  justify-content: space-between;
+  font-weight: bold;
+  height: 60px;
+  padding: 0 15px;
+}
+
+.order-info__articles {
+  color: var(--light-text);
+  font-weight: 300;
+  margin: 0;
+  margin-top: 5px;
+}
+
+.cards-order {
+  margin: 2em 0;
+}
+
+.card-order {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 1.5em 0;
+}
+
+.card-order__product {
+  display: flex;
+  align-items: center;
+}
+
+.card-order__img {
+  width: 70px;
+  height: 70px;
+  margin: 0;
+}
+
+.card-order__img > img {
+  object-fit: cover;
+  width: inherit;
+  height: inherit;
+  border-radius: 20px;
+}
+
+.card-order__title {
+  color: var(--very-light-pink);
+  font-size: var(--text-sm);
+  margin-left: 1em;
+  font-weight: 300;
+}
+
+.card-order__prices {
+  font-size: var(--text-md);
+  font-weight: bold;
+}
+
+.card-order__price img {
+  margin-left: 1em;
+}
+
+.card-order__price {
+  display: flex;
+  align-items: center;
+}
+
+.card-order__btn {
+  width: 100%;
+  color: var(--white);
+  background: var(--hospital-green);
+  border: none;
+  border-radius: 5px;
+  padding: 10px;
+  margin-top: 1em;
+}
+
+/* Shopping Car Fin */
