--- a/normalize.css
+++ b/normalize.css
@@ -14,8 +14,10 @@
   --text-lg: 18px;
 }
 
-body {
+body,
+html {
   font-family: "Quicksand", sans-serif;
+  overflow-x: hidden;
 }
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
