--- a/normalize.css
+++ b/normalize.css
@@ -16,7 +16,7 @@
 
 body {
   font-family: "Quicksand", sans-serif;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
