--- a/css/media.css
+++ b/css/media.css
@@ -1,4 +1,4 @@
-@media (max-width: 1050px) {
+@media (max-width: 1125px) {
   .icon-menu {
     display: block;
     margin-left: 6px;
@@ -15,6 +15,18 @@
   .desk-menu {
     display: none;
   }
+  .card-products {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media (max-width: 900px) {
+  .card-products {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .main-container {
+    width: 100%;
+  }
 }
 @media (max-width: 640px) {
   .order-content {
@@ -26,5 +38,8 @@
     width: 100%;
     display: grid;
     top: 3em;
+  }
+  .card-products {
+    grid-template-columns: repeat(1, 1fr);
   }
 }
