--- a/css/styles.css
+++ b/css/styles.css
@@ -358,7 +358,9 @@ a[class^="mobil-menu__link"] {
   width: 240px;
   height: 240px;
   border-radius: 10px;
-  margin: 18px;
+  margin: 0 18px;
+  object-fit: contain;
+  cursor: pointer;
 }
 
 .card-subtitle_content {
@@ -378,4 +380,90 @@ a[class^="mobil-menu__link"] {
 .icon_cart {
   align-self: center;
 }
-/* Card Product fin */
+/* Card Product Fin */
+
+/* Detail Product */
+.detail-content {
+  display: flex;
+  justify-content: flex-end;
+  position: absolute;
+  right: 0;
+  transform: scale(0);
+  transition: transform 0.5s;
+}
+
+.detail-product {
+  width: 360px;
+  background: var(--white);
+  height: min-content;
+  border: 1px solid var(--very-light-pink);
+  min-height: 100vh;
+  position: relative;
+}
+
+.detail-product__info {
+  width: 85%;
+  margin: auto;
+  display: grid;
+  height: 100%;
+}
+
+.detail-content__product {
+  width: 100%;
+  border-radius: 0 0 15px 15px;
+}
+
+.detail-product__prices {
+  font-size: var(--text-md);
+  font-weight: bold;
+  margin-bottom: 0;
+}
+
+.detail-product__title {
+  font-size: var(--text-sm);
+  margin-top: 7px;
+  color: var(--light-text);
+  font-weight: 500;
+}
+
+.detail-product__description {
+  font-size: var(--text-sm);
+  margin-top: 1em;
+  color: var(--light-text);
+  font-weight: 500;
+}
+
+.detail-product__btn {
+  width: 100%;
+  background: var(--hospital-green);
+  border: none;
+  border-radius: 5px;
+  padding: 3px;
+  display: flex;
+  color: var(--white);
+  align-items: center;
+  margin-top: 2em;
+  justify-content: center;
+}
+
+.detail-product__btn img {
+  margin: 0 1em;
+}
+
+.detail-product__close {
+  position: absolute;
+  background: var(--white);
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  top: 1em;
+  left: 1em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+.scale {
+  transform: scale(1);
+}
+/* Detail Product Fin */
